# python-monorepo-template

./: .gitignore  create_package.sh  create_project.sh  docker-compose.yml  readme.md
.github/: pull_request_template.md
apps/app-1/: README.md  pyproject.toml
apps/app-2/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/app-2/app_2/: main.py
libs/package-1/: pyproject.toml
libs/package-1/namespace/package_1/: module_2.py
libs/package-2/: pyproject.toml
libs/package-2/package_2/: module_1.py
