[tool.poetry]
name = "app-2"
version = "0.1.0"
description = ""
authors = ["{{Author Name}} <{{Author Email}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.1"
isort = "^5.13.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
